conflu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conflu-ingress
spec:
  rules:
  - host: conflu.kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: confluence-1616700180
            port:
              number: 8090
